# Well_data_Po

./: Data_processing.py  Standard_Deviation_Leonardo.csv  Steady_State_Leonardo.csv  WTD_obs_lom_Leonardo.csv  WTD_std_lom_Leonardo.csv  my_video.avi  pyproject.toml  visualize_series.ipynb
EmiliaRomagna/: Anagrafica2012.xlsx  Anagrafica2013.xlsx  Anagrafica2014.xlsx  Anagrafica2015.xlsx  Anagrafica2016.xlsx  Anagrafica2017.xlsx  Anagrafica2018.xlsx  Anagrafica2019.xlsx  Anagrafica2020.xlsx  LivelliPiezometriciEmiliaRomagna2012.xlsx  LivelliPiezometriciEmiliaRomagna2013.xlsx  LivelliPiezometriciEmiliaRomagna2014.xlsx  LivelliPiezometriciEmiliaRomagna2015.xlsx  LivelliPiezometriciEmiliaRomagna2016.xlsx  LivelliPiezometriciEmiliaRomagna2017.xlsx  LivelliPiezometriciEmiliaRomagna2018.xlsx  LivelliPiezometriciEmiliaRomagna2019.xlsx  LivelliPiezometriciEmiliaRomagna2020.xlsx
GIS_Data/: DEM_clip.tif.aux.xml
Lombardia/: Dati quantitativi Brescia_2000_2021.xlsx  Dati quantitativi Como_2000_2021.xlsx  Dati quantitativi Cremona_2000_2021.xlsx  Dati quantitativi Lecco_2000_2021.xlsx  Dati quantitativi Lodi_2000_2021.xlsx  Dati quantitativi Mantova_2000_2021.xlsx  Dati quantitativi Milano_2000_2021.xlsx  Dati quantitativi Monza_2000_2021.xlsx  Dati quantitativi Pavia_2000_2021.xlsx  Dati quantitativi Sondrio_2000_2021.xlsx  Dati quantitativi Varese_2000_2021.xlsx  Dati quantitativi all.xlsx
Piemonte/: 00100410001.csv  00103010001.csv  00103510001.csv  00104110001.csv  00104710001.csv  00105110001.csv  00105910001.csv  00105910002.csv  00106310001.csv  00107010001.csv  (+104 more)
